<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp" >
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAddCCType"
        android:textSize="@dimen/text_size"
        android:layout_row="1"
        android:layout_column="1"/>
    <EditText android:layout_width="@dimen/txtWidth"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:hint="@string/txtAddCCType"
        android:id="@+id/txtAddCCType"
        android:inputType="text"
        android:layout_row="1"
        android:layout_column="2"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAddCCToken"
        android:textSize="@dimen/text_size"
        android:layout_row="2"
        android:layout_column="1"/>
    <EditText android:layout_width="@dimen/txtWidth"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:hint="@string/txtAddCCToken"
        android:id="@+id/txtAddCCToken"
        android:inputType="number"
        android:layout_row="2"
        android:layout_column="2"/>
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDone"
        android:id="@+id/btnAddCategorySave"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="center|top"
        android:textSize="@dimen/text_size"
        style="?android:attr/buttonBarButtonStyle"/>
</GridLayout>