<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="1"
        android:text="@string/lblCategory"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/txtAddCategoryNewCategory"
        android:layout_width="@dimen/txtWidth"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="1"
        android:hint="@string/txtAddCategoryNewCategory"
        android:inputType="text"
        android:textSize="@dimen/text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="2"
        android:text="@string/lblAddCategoryImgType"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgMinus"
            android:src="@drawable/minus"
            android:tag="@string/imgMinus"
            android:id="@+id/imgMinus" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgPlus"
            android:src="@drawable/plus"
            android:tag="@string/imgPlus"
            android:id="@+id/imgPlus" />
    </LinearLayout>
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDone"
        android:id="@+id/btnAddCategorySave"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="center|top"
        android:textSize="@dimen/text_size"
        style="?android:attr/buttonBarButtonStyle"/>
</GridLayout>