<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llCC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/lblCCCurRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCashCurRecord"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <!--
         <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llCCCategory">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lblCategory"
            android:textSize="@dimen/text_size" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="@dimen/txtWidth"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.example.yuriy_mac.financehomemanager.AddButton
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:layout_gravity="center_vertical|start"
            android:onClick="btnAddCategoryClick"
            android:text="@string/btnAddCategory" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCCCredit"
        android:textSize="@dimen/text_size"
        android:id="@+id/lblCredit"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llAction">

        <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:orientation="horizontal" >
        -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbGrpCredit"
                android:orientation="horizontal"
                android:background="@drawable/back">
                <RadioButton
                    android:id="@+id/rbCredit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbCredit"
                    android:tag="1"/>

                <RadioButton
                    android:id="@+id/rbNoCredit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbNoCredit"
                    android:tag="0"/>
            </RadioGroup>
        <!--</LinearLayout>-->

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />
            <!--android:layout_weight="1" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnChangeDate"
            android:background="@drawable/button_back"
            android:onClick="btnChangeDateClick"
            android:text="@string/btnChangeDate"
            android:textSize="@dimen/text_size" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <com.example.yuriy_mac.financehomemanager.AddButton
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:onClick="btnAddCredCardClick"
            android:text="@string/btnAddCC" />
    </LinearLayout>

    <!--<Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblCreditCardName"
        android:text="@string/lblCCNames"
        android:textSize="@dimen/text_size" />

    <!--<GridLayout
        android:id="@+id/glCC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"/>-->

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbGrpCC"
            android:orientation="horizontal"
            android:background="@drawable/back">

        </RadioGroup>
    </HorizontalScrollView>

    <!--<Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/lblTotal"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/txtCCTotalSum"
            android:layout_width="@dimen/txtWidth"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:hint="@string/txtSum"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/lblCCNumOfMonth"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/txtCCNumOfMonth"
            android:layout_width="@dimen/txtWidth"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:hint="@string/txtCCNumOfMonth"
            android:inputType="number"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/lblCCFirstMonth"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/txtCCFirstMonth"
            android:layout_width="@dimen/txtWidth"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:hint="@string/txtSum"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/lblCCAdditionalPayments"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/txtCAdditionalPayments"
            android:layout_width="@dimen/txtWidth"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="4"
            android:hint="@string/txtSum"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size" />
    </GridLayout>-->

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/llCreditCardInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </HorizontalScrollView>


    <!--
    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <com.example.financehomanager.AddButton
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:onClick="btnAddCredCardClick"
        android:text="@string/btnAddCC" />
    -->

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <com.example.yuriy_mac.financehomemanager.CCButtomLine
        android:id="@+id/ccbCC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llButtons">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnNewData"
            android:background="@drawable/button_back"
            android:onClick="btnNewDataClick"
            android:text="@string/btnNewData"
            android:textSize="@dimen/text_size" />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_back"
            android:onClick="btnCloseClick"
            android:text="@string/btnClose"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</LinearLayout>